--- a/web/react_web/src/components/ServiceSmart.css
+++ b/web/react_web/src/components/ServiceSmart.css
@@ -1,7 +1,5 @@
-@import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
-/*font-family: "KoPub Batang";*/
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 
-@import url(https://fonts.googleapis.com/css?family=Orbitron);
 
 
 .Nav-service {
@@ -9,12 +7,13 @@
   background-color: rgb(238, 238, 238);
   height : 55px;
   text-align: center;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 
 .Nav-Text{
   color: rgb(0, 0, 0);
+  letter-spacing: .01em;
   font-size: 17px;
   font-style: normal;
   font-weight: 100;
