--- a/web/react_web/src/DoorSlider.css
+++ b/web/react_web/src/DoorSlider.css
@@ -1,6 +1,5 @@
 .slider-container {
   position: relative;
-  display: block;
   width: 730px;
   height: 410px;
   margin-left: auto;
@@ -11,6 +10,9 @@
 
 
 .slider-content {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .slider-content:hover {
