--- a/web/react_web/src/components/ServiceRR.css
+++ b/web/react_web/src/components/ServiceRR.css
@@ -22,22 +22,27 @@
     background-image: url(../../public/src/image/x-image2.png);
     background-repeat: no-repeat;
     background-size : cover;
+    margin-bottom: 20px;
 }
 
 .X-text-container {
-  padding-top: 20em;
-  text-align: center;
+    padding-top : 370px;
+    text-align: center;
+    width: 35%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.X-title-text {
-    font-family: "KoPub Batang";
+.X-text-title {
+    font-family: "Nanum Gothic";
     font-size: 25px;
     font-weight: 700;
     color: rgb(255, 255, 255);
 }
 
-.X-body-text {
-    margin-top: 30px;
+.X-text-subtitle {
+    padding-top: 5px;
     font-family: "Nanum Gothic";
     font-size: 30px;
     font-weight: 900;
@@ -45,8 +50,8 @@
     margin-bottom: 20px;
 }
 
-.X-description {
-    margin-top: 10px;
+.X-text-desc {
+    padding-top: 5px;
     font-family: "Nanum Gothic";
     font-size: 17px;
     font-weight: 400;
@@ -55,7 +60,6 @@
 
 
 .sick-container {
-    margin-top: 2em;
     max-width: 100%;
     height: 800px;
     /*background-color: rgb(255, 0, 0);*/
@@ -63,35 +67,39 @@
     background-image: url(../../public/src/image/sick_image.jpg);
     background-repeat: no-repeat;
     background-size : cover;
-}
-
-.sick-text-container {
-  padding-top: 15em;
-  padding-right: 45em;
-
-  text-align: center;
-}
-
-.sick-title-text {
-    font-family: "KoPub Batang";
-    font-size: 25px;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
-}
-
-.sick-body-text {
-    margin-top: 30px;
-    font-family: "Nanum Gothic";
-    font-size: 30px;
-    font-weight: 900;
-    color: rgb(0, 0, 0);
     margin-bottom: 20px;
 }
 
-.sick-description {
-    margin-top: 10px;
+.sick-text-container {
+    margin-top : 180px;
+    text-align: center;
+    width: 35%;
+    height: auto;
+    float: left;
+    margin-left: 180px;
+
+}
+
+.sick-text-title {
     font-family: "Nanum Gothic";
-    font-size: 19px;
+    font-size: 25px;
+    font-weight: 700;
+    color: rgb(38, 38, 38);
+}
+
+.sick-text-subtitle {
+    padding-top: 5px;
+    font-family: "Nanum Gothic";
+    font-size: 30px;
+    font-weight: 900;
+    color: rgb(38, 38, 38);
+    margin-bottom: 20px;
+}
+
+.sick-text-desc {
+    padding-top: 5px;
+    font-family: "Nanum Gothic";
+    font-size: 17px;
     font-weight: 400;
-    color: rgb(0, 0, 0);
+    color: rgb(38, 38, 38);
 }
