--- a/web/react_web/src/components/column/Column.css
+++ b/web/react_web/src/components/column/Column.css
@@ -16,7 +16,7 @@
   width: 480px;
   padding-bottom: 37px;
   border-bottom: 6px solid black;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .column-image-container {
@@ -73,4 +73,12 @@ p.column-body-desc {
   font-weight: lighter;
   display: block;
   color: rgb(0, 0, 0);
+}
+
+
+img.column-bottom-sign {
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  display: block;
 }
