--- a/web/react_web/src/components/ServiceHome.css
+++ b/web/react_web/src/components/ServiceHome.css
@@ -48,15 +48,68 @@
 }
 
 .Branding-text-link {
-  padding-top: 8px;
+  font-family: "Nanum Gothic";
+  margin-top: 8px;
+  display: -webkit-flex;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  -webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+  font-size: 12px;
+  color : rgb(255, 255, 255);
+  width: 90px;
+  height: 38px;
+  border : 1px solid white;
+}
+
+.Branding-text-link:hover {
+  color : rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+
+.Branding-text-link-black {
+  font-family: "Nanum Gothic";
+  margin-top: 8px;
+  display: -webkit-flex;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  -webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+  font-size: 12px;
+  color : rgb(0, 0, 0);
+  width: 90px;
+  height: 38px;
+  border : 1px solid black;
+}
+
+.Branding-text-link-black:hover {
+  color : rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+.Recovery-text-title {
   display: block;
-  font-size: 20px;
+  font-size: 23px;
+  color : rgb(0, 0, 0);
+}
+
+.Recovery-text-subtitle {
+  display: block;
+  font-size: 30px;
+  color : rgb(0, 0, 0);
 }
 
 .Recovery-container {
     max-width: 100%;
     height: 700px;
-    background-image: url(../../public/src/image/publishing/r_recovery.png);
+    background-image: url(../../public/src/image/publishing/r_fail.png);
     background-color: rgb(255, 255, 255);
     background-repeat: no-repeat;
     background-size : cover;
