--- a/web/react_web/src/components/ServicePPC.css
+++ b/web/react_web/src/components/ServicePPC.css
@@ -29,6 +29,7 @@
     width: 30%;
     float: right;
     height: auto;
+    text-align: center;
 }
 
 .looser-text-title {
@@ -50,8 +51,8 @@
 .looser-text-desc {
     padding-top: 5px;
     font-family: "Nanum Gothic";
-    font-size: 18px;
-    font-weight: 900;
+    font-size: 16px;
+    font-weight: 300;
     color: rgb(244, 244, 244);
 }
 
@@ -67,10 +68,12 @@
 }
 
 .consulting-text-container {
-    padding-top: 100px;
-    width: 30%;
+    padding-top: 160px;
+    margin-right: 30px;
     float: right;
+    width: 30%;
     height: auto;
+    text-align: center;
 }
 
 .consulting-text-title {
@@ -92,14 +95,56 @@
 .consulting-text-desc {
     padding-top: 5px;
     font-family: "Nanum Gothic";
-    font-size: 18px;
-    font-weight: 900;
+    font-size: 16px;
+    font-weight: 500;
     color: rgb(244, 244, 244);
 }
 
 
 .request-text {
-    font-size: 15px;
-    font-family: "Nanum Gothic";
-    font-weight: bold;
+  margin-top: 8px;
+  font-family: "Nanum Gothic";
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+  font-size: 12px;
+  color : rgb(255, 255, 255);
+  width: 80px;
+  height: 35px;
+  border : 1px solid white;
+}
+
+.request-text:hover {
+  color : rgb(255, 255, 255);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.request-text-black {
+  margin-top: 8px;
+  font-family: "Nanum Gothic";
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+  font-size: 12px;
+  color : rgb(0, 0, 0);
+  width: 80px;
+  height: 35px;
+  border : 1px solid black;
+}
+
+.request-text-black:hover {
+  color : rgb(0, 0, 0);
+  text-decoration: none;
+  cursor: pointer;
 }
