--- a/web/react_web/src/components/ServiceStyle.css
+++ b/web/react_web/src/components/ServiceStyle.css
@@ -14,15 +14,26 @@
 /*font-family: 'Hanna', sans-serif;*/
 
 
-.styling-container {
-    margin-bottom: 10px;
+.hair-styling-container {
     max-width: 100%;
     height: 680px;
     /*background-color: rgb(255, 0, 0);*/
     background-color: rgb(255, 255, 255);
-    background-image: url(../../public/src/image/styling_image.jpg);
+    background-image: url(../../public/src/image/publishing/style_b3.jpg);
     background-repeat: no-repeat;
     background-size : cover;
+    margin-bottom: 20px;
+}
+
+.grooming-styling-container {
+    max-width: 100%;
+    height: 680px;
+    /*background-color: rgb(255, 0, 0);*/
+    background-color: rgb(255, 255, 255);
+    background-image: url(../../public/src/image/publishing/style_b2.jpg);
+    background-repeat: no-repeat;
+    background-size : cover;
+    margin-bottom: 20px;
 }
 
 .styling-animal-container {
@@ -33,14 +44,16 @@
     background-image: url(../../public/src/image/publishing/s_horse.png);
     background-repeat: no-repeat;
     background-size : cover;
+    margin-bottom: 20px;
 }
 
 
 
 .styling-text-container {
-  padding-top: 7em;
-  text-align: left;
-  padding-left: 80%;
+  padding-top: 10em;
+  float: right;
+  width: 27%;
+  text-align: center;
 }
 
 .styling-title-text {
@@ -51,18 +64,16 @@
 }
 
 .styling-body-text {
-    margin-top: 30px;
     font-family: "Nanum Gothic";
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 900;
     color: rgb(255, 255, 255);
-    margin-bottom: 20px;
 }
 
 .styling-description {
     margin-top: 10px;
     font-family: "Nanum Gothic";
-    font-size: 17px;
+    font-size: 19px;
     font-weight: 400;
     color: rgb(255, 255, 255);
 }
