--- a/web/react_web/src/components/YoutubeView.css
+++ b/web/react_web/src/components/YoutubeView.css
@@ -3,7 +3,7 @@
 
 .YT-container {
   padding-top: 50px;
-  background-color: rgb(0, 0, 0);
+  background-color: #1c2127;
   text-align: center;
 }
 
@@ -20,17 +20,21 @@
   font-style: normal;
   font-weight: 100;
   font-size: 14px;
+  width: 620px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  overflow:auto;
 }
 
 .YT-content {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 50px;
-  height: 580px;
+  margin-top: 30px;
 }
 
 
 .cover-container {
-  background-color: rgb(0, 0, 0);
+  background-color: #1c2127;
 }
