--- a/web/react_web/src/components/ColumnSmart.css
+++ b/web/react_web/src/components/ColumnSmart.css
@@ -48,3 +48,16 @@
   color: rgb(0, 0, 0);
   text-decoration: none;
 }
+
+
+@media screen and (max-width: 480px) {
+  .column-nav-list {
+    display: none;
+  }
+
+  .column-container {
+    border : none;
+    margin-top: 50px;
+  }
+
+}
