--- a/web/react_web/src/components/Product.css
+++ b/web/react_web/src/components/Product.css
@@ -10,7 +10,7 @@
 .product-header {
     padding-top: 30px;
     display: block;
-    height: 100px;
+    height: 80px;
 }
 
 .product-header p {
@@ -44,7 +44,7 @@
 }
 
 
-.Collapsible {
+.Collapsible-product {
     padding-top: 20px;
     margin-left: 40px;
     margin-right: 40px;
@@ -52,10 +52,11 @@
     height: auto;
     border-bottom: 1px solid black;
 }
-.Collapsible:after {
+
+.Collapsible-product:after {
 }
 
-.Collapsible__trigger {
+.Collapsible-product__trigger {
     font-family: 'Noto Sans', sans-serif;
     width:100%;
     height: 20px;
@@ -63,16 +64,16 @@
     color : gray;
 }
 
-.Collapsible__trigger.is-open {
+.Collapsible-product__trigger.is-open {
     color : rgb(0, 0, 0);
 }
 
-.Collapsible__trigger:hover {
+.Collapsible-product__trigger:hover {
     color : rgb(0, 0, 0);
     cursor: pointer;
 }
 
-.Collapsible__contentInner {
+.Collapsible-product__contentInner {
     text-overflow : auto;
     font-family: "Nanum Gothic";
     font-size : 15px;
@@ -80,12 +81,12 @@
     padding-top : 10px;
 }
 
-.Collapsible__contentInner .info {
-    margin-top: 15px;
+.Collapsible-product__contentInner .info {
+    margin-top: 25px;
     text-align: right;
 }
 
-.Collapsible__contentOuter {
+.Collapsible-product__contentOuter {
     margin-top : 10px;
     margin-bottom : 10px;
 }
@@ -98,5 +99,77 @@
     margin-right: 40px;
     font-size : 15px;
     font-weight: 500;
+}
 
+@media screen and (max-width: 480px) {
+  .product-header {
+    margin-left: 0px;
+    padding-left: 20px;
+  }
+
+  .product-header p {
+      display: inline-block;
+      font-family: "Nanum Gothic";
+      float: left;
+      padding-left: 0px;
+      font-weight: 600;
+      font-size: 21px;
+  }
+
+  .Collapsible-product {
+      padding-top: 20px;
+      margin-left: 20px !important;
+      margin-right: 20px !important;
+      display: block;
+      height: auto;
+      border-bottom: 1px solid black;
+  }
+  .Collapsible-product-product:after {
+  }
+
+  .Collapsible-product__trigger {
+      font-family: 'Noto Sans', sans-serif;
+      width:100%;
+      height: 20px;
+      font-size : 17px !important;
+      color : black !important;
+  }
+
+  .Collapsible-product__trigger.is-open {
+      color : rgb(0, 0, 0);
+  }
+
+  .Collapsible-product__trigger:hover {
+      color : rgb(0, 0, 0);
+      cursor: pointer;
+  }
+
+  .Collapsible-product__contentInner {
+      text-overflow : auto;
+      font-family: "Nanum Gothic";
+      margin-left: 0px !important;
+      font-size : 14px !important;
+      padding-bottom : 10px;
+      padding-top : 10px;
+  }
+
+  .Collapsible-product__contentInner .info {
+      margin-top: 25px;
+      text-align: right;
+  }
+
+  .Collapsible-product__contentOuter {
+      margin-top : 10px;
+      margin-bottom : 10px;
+  }
+
+  .call-box {
+    font-family: "Nanum Gothic";
+    margin-top: 40px;
+    position :relative;
+    float: right;
+    margin-right: 20px;
+    font-size : 13px;
+    font-weight: 500;
+  }
 }
