--- a/web/react_web/src/components/ServiceSmart.css
+++ b/web/react_web/src/components/ServiceSmart.css
@@ -43,3 +43,34 @@
   color: rgb(0, 78, 181);
   text-decoration: none;
 }
+
+.service-menu {
+  display: none;
+}
+
+.burger-box{
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+
+  .Nav-service {
+    display: none;
+  }
+
+  .burger-box {
+    background-color: white;
+    display: block;
+    position: fixed;
+    top:0;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    text-align: center;
+  }
+  .burger-box b {
+    line-height: 50px;
+    font-size: 18px;
+    font-family: 'Noto Sans', sans-serif;
+  }
+}
