--- a/web/react_web/src/components/YoutubeView.css
+++ b/web/react_web/src/components/YoutubeView.css
@@ -38,3 +38,36 @@
 .cover-container {
   background-color: #1c2127;
 }
+
+
+@media screen and (max-width: 480px) {
+  .YT-container {
+    padding-top: 20px;
+    margin-top: 50px;
+    background-color: #1c2127;
+    text-align: center;
+  }
+
+  .media-text{
+    color: rgb(227, 227, 227);
+    font-family: 'Orbitron', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+  }
+  .media-description-text {
+    color: rgb(227, 227, 227);
+    font-family: 'Orbitron', sans-serif;
+    font-style: normal;
+    font-weight: 100;
+    font-size: 14px;
+    width: 100%;
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 15px;
+    overflow:auto;
+  }
+
+
+}
