--- a/web/react_web/src/components/column/Column.css
+++ b/web/react_web/src/components/column/Column.css
@@ -83,3 +83,56 @@ img.column-bottom-sign {
   width: auto;
   display: block;
 }
+
+
+@media screen and (max-width: 480px) {
+  .column-title-container{
+    border-top: 1px solid black;
+    width: 100%;
+    padding: 20px;
+  }
+
+  .column-text-container {
+    width: 100%;
+  }
+
+  .column-image-container {
+    width: 100%;
+    height: auto;
+  }
+
+  .column-text-container {
+    width: 100%;
+    padding: 20px;
+    border-bottom: none;
+    margin-bottom: 0px;
+  }
+
+  h1.column-text-title {
+    margin-top: 0;
+    font-size: 27px;
+    height: 60px;
+  }
+
+  h3.column-text-subtitle {
+    font-size:16px;
+    height: 60px;
+    width: 100%;
+    height: 30px;
+  }
+
+  b.column-body-title {
+    font-size:15px;
+  }
+
+  p.column-body-desc {
+    font-size:13px;
+  }
+
+  .empty-container {
+    height: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-top: 4px solid black;
+  }
+}
