--- a/web/react_web/src/components/ServiceStyle.css
+++ b/web/react_web/src/components/ServiceStyle.css
@@ -41,7 +41,7 @@
     height: 680px;
     /*background-color: rgb(255, 0, 0);*/
     background-color: rgb(255, 255, 255);
-    background-image: url(../../public/src/image/publishing/s_horse.png);
+    background-image: url(../../public/src/image/publishing/horse.jpg);
     background-repeat: no-repeat;
     background-size : cover;
     margin-bottom: 20px;
