--- a/web/react_web/src/components/MainSmart.css
+++ b/web/react_web/src/components/MainSmart.css
@@ -150,7 +150,7 @@
   }
 
   .Collapsible {
-      padding-top: 20px;
+      padding-top: 0px;
       margin-left: 10px;
       margin-right: 0px;
       display: block;
@@ -225,6 +225,7 @@
     color: rgb(255, 255, 255);
     display: block;
     margin-top: 0px;
+    height: 56px;
   }
 
   .menu-item-big-first:hover {
