--- a/web/react_web/src/components/ServicePPC.css
+++ b/web/react_web/src/components/ServicePPC.css
@@ -61,7 +61,7 @@
     height: 600px;
     /*background-color: rgb(255, 0, 0);*/
     background-color: rgb(255, 255, 255);
-    background-image: url(../../public/src/image/publishing/HB_2.png);
+    background-image: url(../../public/src/image/publishing/HB_2.jpg);
     background-repeat: no-repeat;
     background-size : cover;
     margin-bottom: 20px;
@@ -154,6 +154,7 @@
 }
 
 
+
 .ReactModalPortal {
 }
 
@@ -164,11 +165,13 @@
   bottom:0;
   width: 100%;
   height:100%;
+  background-color: rgba( 255, 255, 255, 0.6 );
+  position: absolute;
 }
 
 .ReactModal__Content {
   top:10%;
-  height: 80%;
+  height: 90%;
   left: 20%;
   width:60%;
   position: absolute;
@@ -181,7 +184,8 @@
 }
 
 .ReactModal__Body--open {
-  overflow: hidden;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
 }
 
 @media screen and (max-width: 480px) {
@@ -191,7 +195,9 @@
     left:0px;
     height: 100%;
     width: 100%;
+    position : fixed;
   }
+
 
   .ReactModal__Content {
     z-index: 3;
@@ -199,6 +205,7 @@
     left:0px;
     height: 100%;
     width: 100%;
+    position : fixed;
   }
 
   .looser-container {
@@ -219,7 +226,7 @@
       height: 210px;
       /*background-color: rgb(255, 0, 0);*/
       background-color: rgb(255, 255, 255);
-      background-image: url(../../public/src/image/publishing/HB_2.png);
+      background-image: url(../../public/src/image/publishing/HB_2.jpg);
       background-repeat: no-repeat;
       background-size : cover;
       background-position: center;
